# V.M.O.S.S.A

./: LICENSE  README.md  testing.py
beta 0.0.1/avocado/DataA pip/: LICENSE
beta 0.0.1/avocado/DataA pip/DataA/: DataA.py
beta 0.0.1/avocado/DataA/app/: file-handel.py  main.py  starter.py  testing.py
beta 0.0.1/avocado/DataA/app/poper/: setup.bat
beta 0.0.2/avocado/: history.db  starter.spec
beta 0.0.2/avocado/DataA pip/: setup.cfg
beta 0.0.2/avocado/DataA/Debug files/: Protocal.txt  note.py
beta 0.0.2/avocado/DataA/app/: asd.txt  starter.py  testing.py
beta 0.0.2/avocado/DataA/app/JSON/: ud.json
beta 0.0.3/avocado/: ODBC.accdb
beta 0.0.3/avocado/DataA/Debug files/: Chach Debug.rar
beta 0.0.3/avocado/DataA/app/: main.py  starter.py  testing.py
version-0.0.1/avocado/DataA/app/: file_handel.py  fir_run.py  sec_run.py  srf.bat  starter.py
version-0.0.2/avocado/.boot/: note.bat
version-0.0.2/avocado/.boot/DataA/app/: fir_run.py
version-0.0.2/avocado/.boot/DataA/app/customlocallibs/: classes_handel.py  error_handel.py
version-0.0.2/avocado/.boot/DataA/app/poper/: pop.ps1
version-0.0.3 (Patched)/: .boot.bat
version-0.0.3 (Patched)/DataA/app/: fir_run.py
version-0.0.3 (Patched)/DataA/app/AvoEmail/: MainGUI.py
version-0.0.3 (Patched)/DataA/app/reqs/: bef.txt
version-0.0.3/avocado/.boot/DataA/app/: file_handel.py  fir_run.py  sec_run.py  starter.py
version-0.0.4/DataA/app/: fir_run.py  srf.bat
version-0.0.4/DataA/app/Debug files/: Chach Debug.rar  index.html
version-0.0.4/DataA/app/reqs/: req.txt
(+1 files in other folders)
