[metadata]
name = aesthetic_ascii
version = 0.0.0
author = Iona Mitterfellner
author_email = ionapersonal@gmail.com
description = For anything
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True